<update> database